# freesurfer-brainage

./: Makefile  README.md  requirements.txt  setup.cfg
src/brainage/: compile_brainage.py  compute_brainage.py
