[metadata]
name = freesurfer-brainage
version = 0.0.1

[options]
package_dir=
    =src
install_requires =
    antspynet
    antspyx
    pandas
    tqdm

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    compute_brainage = brainage.compute_brainage:main
    compile_brainage = brainage.compile_brainage:main
